# lbry.fun

./: .cursorignore  AGENT_CONTEXT.md  CLAUDE.md  Cargo.toml  PHASE1_QUICKSTART.md  README.md  analyze_raw_data.py  analyze_tokenomics_data.py  canister_ids.json  collect_tokenomics_data.js  collect_tokenomics_data.py  components.json  data_collection_guide.md  dfx.json  dfx_local.json  dfx_mainnet.json  frontend_audit_analysis.md  hardcoded_color_elimination_summary.md  jest.config.js  optimizefrontendplan.md  optimizefrontendplan_revised.md  package.json  parse_tokenomics_data.py  phase15_tokenomics_test.sh  phase1_corrected_findings.md  phase1_findings.md  phase5_completion_summary.md  plan.md  projectplan.md  run_tests.sh  tailwind.config.js  test_multi_epoch.sh  test_tokenomics_corrected.sh  testingprd.md  themeplan.md  tokenomics_analysis_report.md  tokenomics_data_template.csv  tree.txt  tsconfig.json  webpack.config.js
coverage/: clover.xml  coverage-final.json  lcov.info
scripts/: build.sh  collect_tokenomics_data.sh  generateTree.js  icp_swap_argument.txt  network_deploy.sh  network_deploy_frontend.sh  snapshot.sh
src/icp_swap/: Cargo.toml  icp_swap.did
src/icp_swap/src/: constants.rs  dex_integration.rs  error.rs  lib.rs  queries.rs  script.rs  storage.rs  update.rs  utils.rs
tests/: Cargo.toml  canister_interaction_analysis.md  individual_canister_tests.rs  integrated_token_tests.rs  main.rs  mock_kong_swap_canister.did  phase1_environment_tests.rs  phase2_token_operations.rs  real_execution.rs  real_execution_v2.rs  token_results.md
tests/src/: lib.rs  (+10 more)
(+464 files in other folders)
