[package]
name = "icp_swap"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.3"
ic-cdk = "0.13.2"
ic-cdk-timers = "0.7.0"
ic-stable-structures = "0.6.3"
ic-ledger-types = "0.9.0"
icrc-ledger-types = "0.1.4"
serde = "1.0.197"
serde_bytes = "0.11.14"
num-bigint = "0.4.4"
ic-cdk-macros = "0.13.2"
sha2 = "0.10.8"
hex = "0.4.3"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["full"] }
